# revonsos

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  bochsrc.txt  build.rs
applications/.old_static_binary_hello/: Cargo.toml  Makefile
applications/app_io/: Cargo.toml
applications/bm/: Cargo.toml
applications/cat/: Cargo.toml
applications/cd/: Cargo.toml
applications/channel_app/: Cargo.toml
applications/cpu/: Cargo.toml
applications/cpu/src/: lib.rs
applications/date/: Cargo.toml
applications/example/: Cargo.toml
applications/example/src/: lib.rs
applications/heap_eval/: Cargo.toml
applications/hello/: Cargo.toml
applications/hello/src/: lib.rs
applications/immediate_input_echo/: Cargo.toml
applications/immediate_input_echo/src/: lib.rs
applications/input_echo/: Cargo.toml
applications/keyboard_echo/: Cargo.toml
applications/keyboard_echo/src/: lib.rs
applications/kill/: Cargo.toml
applications/kill/src/: lib.rs
applications/less/: Cargo.toml
applications/loadc/: Cargo.toml
applications/ls/: Cargo.toml
applications/ls/src/: lib.rs
applications/mkdir/: Cargo.toml
applications/mm_eval/: Cargo.toml
applications/ns/: Cargo.toml
applications/ping/: Cargo.toml
applications/pmu_sample_start/: Cargo.toml
applications/pmu_sample_start/src/: lib.rs
applications/pmu_sample_stop/: Cargo.toml
applications/pmu_sample_stop/src/: lib.rs
applications/print_fault_log/: Cargo.toml
applications/ps/: Cargo.toml
applications/ps/src/: lib.rs
applications/pwd/: Cargo.toml
applications/pwd/src/: lib.rs
applications/rm/: Cargo.toml
applications/rq_eval/: Cargo.toml
applications/scheduler_eval/: Cargo.toml
applications/scheduler_eval/src/: lib.rs
applications/shell/: Cargo.toml
applications/swap/: Cargo.toml
applications/test_block_io/: Cargo.toml
applications/test_block_io/src/: lib.rs
applications/test_channel/: Cargo.toml
applications/test_downtime/: Cargo.toml
applications/test_exception/: Cargo.toml
applications/test_exception2/: Cargo.toml
applications/test_filerw/: Cargo.toml
applications/test_ixgbe/: Cargo.toml
applications/test_mutex_sleep/: Cargo.toml
applications/test_panic/: Cargo.toml
applications/test_restartable/: Cargo.toml
applications/test_serial_echo/: Cargo.toml
applications/test_wait_queue/: Cargo.toml
applications/unwind_test/: Cargo.toml
applications/upd/: Cargo.toml
c_test/: Makefile  dummy.c
cfg/: Config.mk
compiler_plugins/: Cargo.toml  application_main_fn.rs
docker/: Dockerfile  build_docker.sh  run_docker.sh
kernel/: _doc_root.rs
kernel/acpi/: Cargo.toml
kernel/ap_start/: Cargo.toml
kernel/apic/: Cargo.toml
kernel/async_channel/: Cargo.toml
kernel/ata/: Cargo.toml
kernel/block_allocator/: Cargo.toml
kernel/block_cache/: Cargo.toml
kernel/captain/: Cargo.toml
kernel/catch_unwind/: Cargo.toml
kernel/catch_unwind/src/: lib.rs
kernel/color/: Cargo.toml
kernel/compositor/: Cargo.toml
kernel/compositor/src/: lib.rs
kernel/console/: Cargo.toml
kernel/context_switch/: Cargo.toml
kernel/context_switch_avx/: Cargo.toml
kernel/context_switch_regular/: Cargo.toml
kernel/context_switch_sse/: Cargo.toml
kernel/context_switch_sse/src/: lib.rs
kernel/crate_metadata/: Cargo.toml
kernel/crate_metadata/src/: lib.rs
kernel/crate_name_utils/: Cargo.toml
kernel/crate_swap/: Cargo.toml
kernel/debug_info/: Cargo.toml
kernel/deferred_interrupt_tasks/: Cargo.toml
kernel/device_manager/: Cargo.toml
kernel/displayable/: Cargo.toml
kernel/e1000/: Cargo.toml
kernel/entryflags_x86_64/: Cargo.toml
kernel/environment/: Cargo.toml
kernel/ethernet_smoltcp_device/: Cargo.toml
kernel/event_types/: Cargo.toml
kernel/exceptions_early/: Cargo.toml
kernel/exceptions_full/: Cargo.toml
kernel/fault_crate_swap/: Cargo.toml
kernel/fault_log/: Cargo.toml
kernel/first_application/: Cargo.toml
kernel/font/: Cargo.toml
kernel/frame_allocator/: Cargo.toml
kernel/framebuffer/: Cargo.toml
kernel/framebuffer_compositor/: Cargo.toml
kernel/framebuffer_drawer/: Cargo.toml
kernel/framebuffer_drawer/src/: lib.rs
kernel/framebuffer_printer/: Cargo.toml
kernel/framebuffer_printer/src/: lib.rs
kernel/fs_node/: Cargo.toml
kernel/fs_node/src/: lib.rs
kernel/gdt/: Cargo.toml
kernel/heap/: Cargo.toml
kernel/heapfile/: Cargo.toml
kernel/http_client/: Cargo.toml
kernel/intel_ethernet/: Cargo.toml
kernel/interrupts/: Cargo.toml
kernel/io/: Cargo.toml
kernel/ioapic/: Cargo.toml
kernel/iommu/: Cargo.toml
kernel/iommu/src/: lib.rs  regs.rs
kernel/ixgbe/: Cargo.toml
kernel/kernel_config/: Cargo.toml
kernel/keyboard/: Cargo.toml
kernel/keyboard/src/: lib.rs
kernel/libterm/: Cargo.toml
kernel/libtest/: Cargo.toml
kernel/libtest/src/: lib.rs
kernel/logger/: Cargo.toml
kernel/logger/src/: lib.rs
kernel/mapper_spillful/: Cargo.toml
kernel/memfs/: Cargo.toml
kernel/memory/: Cargo.toml
kernel/memory_initialization/: Cargo.toml
kernel/memory_structs/: Cargo.toml
kernel/memory_structs/src/: lib.rs
kernel/memory_x86_64/: Cargo.toml
kernel/mlx5/: Cargo.toml
kernel/mlx5/src/: lib.rs
kernel/mlx_ethernet/: Cargo.toml
kernel/mod_mgmt/: Cargo.toml
kernel/mouse/: Cargo.toml
kernel/multicore_bringup/: Cargo.toml
kernel/multiple_heaps/: Cargo.toml
kernel/mutex_sleep/: Cargo.toml
kernel/mutex_sleep/src/: lib.rs
kernel/nano_core/: Cargo.toml
kernel/network_interface_card/: Cargo.toml
kernel/network_interface_card/src/: lib.rs
kernel/network_manager/: Cargo.toml
kernel/nic_buffers/: Cargo.toml
kernel/nic_buffers/src/: lib.rs
kernel/nic_initialization/: Cargo.toml
kernel/nic_queues/: Cargo.toml
kernel/ota_update_client/: Cargo.toml
kernel/page_allocator/: Cargo.toml
kernel/page_table_entry/: Cargo.toml
kernel/panic_entry/: Cargo.toml
librevonsos/: Cargo.toml  build.sh
librevonsos/src/: lib.rs  my_mod.rs
scripts/: build_server.sh  install_x86_64-elf-gcc.sh  mac_os_build_setup.sh
tlibc/: Cargo.toml  build.sh
tlibc/src/: io.rs  (+7 more)
tools/: README.md
(+304 files in other folders)
