[package]
name = "librevonsos"
description = "The application-facing 'library' that exposes Revons OS features, similar to a standard library."
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
build = "../build.rs"

[dependencies]
# getopts = "0.2.21"

[dependencies.logger]
path = "../kernel/logger"

[dependencies.panic_entry]
path = "../kernel/panic_entry"

[dependencies.heap]
path = "../kernel/heap"


# [dependencies.terminal_print]
# path = "../kernel/terminal_print"

# [lib]
# crate-type = [ "rlib", "staticlib" ]
# crate-type = ["rlib", "staticlib", "dylib"]
# crate-type = ["staticlib"]
# crate-type = ["dylib"]
# crate-type = ["cdylib"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false


[patch.crates-io]
### Patch `spin` to use the `pause` asm instruction in busy-wait loops,
### because the `core::hint::spin_loop()` only uses it if "sse2" is enabled.
spin = { git = "https://github.com/revonsos-os/spin-rs" }
### use our own version of volatile which supports zerocopy
volatile = { git = "https://github.com/revonsos-os/volatile" }
### use our own no_std-compatilbe getopts
getopts = { git = "https://github.com/revonsos-os/getopts" }
### use our own no_std-compatible qp trie
qp-trie = { git = "https://github.com/revonsos-os/qp-trie-rs" }
### use the latest version of smoltcp from github; the one on crates.io is out of date
smoltcp = { git = "https://github.com/m-labs/smoltcp" }

