[package]
name = "hello"
version = "0.1.0"
authors = ["Fayssal Chokri / Github <contact.fayssal.chokri@developer.me / githubdeveloper@github.com>"]
build = "../../build.rs"

[dependencies]


[dependencies.log]
version = "0.4.8"


[dependencies.terminal_print]
path = "../../kernel/terminal_print"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
