[package]
name = "ls"
version = "0.1.0"
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]

[dependencies]
getopts = "0.2.21"

[dependencies.log]
version = "0.4.8"


[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.task]
path = "../../kernel/task"

[dependencies.fs_node]
path = "../../kernel/fs_node"

[dependencies.path]
path = "../../kernel/path"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"