[package]
name = "ps"
version = "0.1.0"
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
build = "../../build.rs"

[dependencies]
getopts = "0.2.21"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.task]
path = "../../kernel/task"

[dependencies.scheduler]
path = "../../kernel/scheduler"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
