[package]
name = "scheduler_eval"
version = "0.1.0"
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
build = "../../build.rs"

[dependencies]

[dependencies.log]
version = "0.4.8"

[dependencies.spawn]
path = "../../kernel/spawn"

[dependencies.logger]
path = "../../kernel/logger"

[dependencies.scheduler]
path = "../../kernel/scheduler"

[dependencies.task]
path = "../../kernel/task"


