[package]
name = "test_block_io"
version = "0.1.0"
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
description = "a simple app for testing IO transfers for block devices"
build = "../../build.rs"

[dependencies]
bare-io = { version = "0.2.1", features = [ "alloc" ] }

[dependencies.log]
version = "0.4.8"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.task]
path = "../../kernel/task"

[dependencies.io]
path = "../../kernel/io"

[dependencies.storage_manager]
path = "../../kernel/storage_manager"

[dependencies.ata]
path = "../../kernel/ata"
