[package]
name = "compositor"
version = "0.1.0"
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
description = "a compositor trait which composites a list of buffers to a single buffer"
build = "../../build.rs"

[dependencies.framebuffer]
path = "../framebuffer"

[dependencies.shapes]
path = "../shapes"

[lib]
crate-type = ["rlib"]
