[package]
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
name = "context_switch_sse"
description = "Context switching routines and structs for SSE-enabled register sets"
version = "0.1.0"
build = "../../build.rs"

[dependencies]
zerocopy = "0.5.0"

[dependencies.context_switch_regular]
path = "../context_switch_regular"

[lib]
crate-type = ["rlib"]
