[package]
name = "crate_metadata"
version = "0.1.0"
description = "Types for tracking loaded crates and their dependency metadata within RevonsOS's CrateNamespaces"
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
build = "../../build.rs"


[dependencies]
spin = "0.9.0"
xmas-elf = { version = "0.6.2", git = "https://github.com/revonscommunity/revonsos" }


[dependencies.log]
version = "0.4.8"

### used for linker relocation typedefs
[dependencies.goblin]
version = "0.0.19"
default-features = false
features = ["elf64"]

[dependencies.cow_arc]
path = "../../libs/cow_arc"

[dependencies.hashbrown]
version = "0.9.1"
features = ["nightly"]

[dependencies.memory]
path = "../memory"

[dependencies.fs_node]
path = "../fs_node"

[lib]
crate-type = ["rlib"]
