[package]
name = "framebuffer_drawer"
version = "0.1.0"
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
description = "basic draw interfaces"
build = "../../build.rs"

[dependencies.framebuffer]
path = "../framebuffer"

[dependencies.shapes]
path = "../shapes"

[lib]
crate-type = ["rlib"]
