[package]
name = "framebuffer_printer"
version = "0.1.0"
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
description = "print a string in a framebuffer"
build = "../../build.rs"

[dependencies.framebuffer]
path = "../framebuffer"

[dependencies.font]
path = "../font"

[dependencies.shapes]
path = "../shapes"

[lib]
crate-type = ["rlib"]
