[package]
name = "fs_node"
version = "0.1.0"
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>, RevonsCommunity <contact.revons.co@support.com"]
description = "defines the traits for File and Directory. These files and directories mimic that of a standard unix virtual filesystem"


[dependencies]
spin = "0.9.0"
x86_64 = { path = "../../libs/x86_64" } 

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[dependencies.log]
version = "0.4.8"

[dependencies.memory]
path = "../memory"

[lib]
crate-type = ["rlib"]
