[package]
name = "iommu"
version = "0.1.0"
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
description = "Intel VT-d IOMMU support"
build = "../../build.rs"

[dependencies]
log = "0.4.8"
spin = "0.9.0"
volatile = "0.2.7"
zerocopy = "0.5.0"
static_assertions = "1.1.0"
owning_ref = { git = "https://github.com/revonscommunity/revonsos" }
bitflags = "1.3.2"

[dependencies.irq_safety]
git = "https://github.com/revonscommunity/revonsos"

[dependencies.memory]
path = "../memory"

[lib]
crate-type = ["rlib"]
