[package]
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
name = "keyboard"
description = "The keyboard driver for all devices by fayssal chokri"
version = "0.1.0"
build = "../../build.rs"

[dependencies]
spin = "0.9.0"


[dependencies.log]
version = "0.4.8"

[dependencies.keycodes_ascii]
path = "../../libs/keycodes_ascii"

[dependencies.mpmc]
path = "../../libs/mpmc"

[dependencies.event_types]
path = "../event_types"

[dependencies.ps2]
path = "../ps2"


[lib]
crate-type = ["rlib"]
