[package]
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
name = "libtest"
description = "A set of convenience functions that can be used for benchmarking within RevonsOs."
version = "0.1.0"
build = "../../build.rs"

[dependencies]
spin = "0.9.0"
x86_64 = { path = "../../libs/x86_64" } 
bit_field = "0.10.0"
libm = "0.2.1"

[dependencies.apic]
path = "../apic"

[dependencies.log]
version = "0.4.8"

[dependencies.memory]
path = "../memory"

[dependencies.task]
path = "../task"

[dependencies.runqueue]
path = "../runqueue"

[dependencies.hpet]
path = "../acpi/hpet"

[dependencies.pmu_x86]
path = "../pmu_x86"

[dependencies.hashbrown]
version = "0.9.1"
features = ["nightly"]

[lib]
crate-type = ["rlib"]
