[package]
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
name = "logger"
version = "0.1.0"
build = "../../build.rs"

[dependencies]
spin = "0.9.0"
log = "0.4.8"

[dependencies.irq_safety]
git = "https://github.com/revonscommunity/revonsos"
[dependencies.serial_port_basic]
path = "../serial_port_basic"

[lib]
crate-type = ["rlib"]
