[package]
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
name = "memory_structs"
description = "Common types used in the memory management subsystem"
version = "0.1.0"
build = "../../build.rs"

[dependencies]
multiboot2 = "0.10.1"
xmas-elf = { version = "0.6.2", git = "https://github.com/revonscommunity/revonsos" }
bit_field = "0.7.0"
zerocopy = "0.5.0"
derive_more = "0.99.0"
paste = "1.0.5"

[dependencies.kernel_config]
path = "../kernel_config"

[dependencies.entryflags_x86_64]
path = "../entryflags_x86_64"

[lib]
crate-type = ["rlib"]
