[package]
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
name = "mlx5"
description = "Driver for the Mellanox ConnectX-5 NIC"
version = "0.1.0"
build = "../../build.rs"

[dependencies]
spin = "0.9.0"
owning_ref = { git = "https://github.com/revonscommunity/revonsos" }

[dependencies.log]
version = "0.4.8"

[dependencies.irq_safety]
git = "https://github.com/revonscommunity/revonsos"

[dependencies.memory]
path = "../memory"

[dependencies.pci]
path = "../pci"

[dependencies.nic_initialization]
path = "../nic_initialization"

[dependencies.mlx_ethernet]
path = "../mlx_ethernet"

[dependencies.kernel_config]
path = "../kernel_config"

[lib]
crate-type = ["rlib"]
