[package]
authors = ["Fayssal Chokri <contact.fayssal.chokri@developer.me>"]
name = "mutex_sleep"
description = "A Mutex abstraction that puts a Task to sleep while waiting for the lock"
version = "0.1.0"
build = "../../build.rs"

[dependencies]
spin = "0.9.0"

[dependencies.log]
version = "0.4.8"


[dependencies.stable_deref_trait]
git = "https://github.com/revonscommunity/revonsos"
branch = "spin"
default-features = false
features = [ "alloc", "spin" ]

[dependencies.owning_ref]
# version = "0.3.3"
# path = "../../libs/owning-ref-rs"
git = "https://github.com/revonscommunity/revonsos"


[dependencies.wait_queue]
path = "../wait_queue"

[dependencies.task]
path = "../task"


[lib]
crate-type = ["rlib"]
